@@ -19,8 +19,7 @@ WISH: anyevent mouse notification / manage MotionMask better.
 WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
 DUMB: support tex fonts
 
-TODO: rxvt -bg "#262626" -fn "xft:Andale Mono:pixelsize=15"
-      # causes some lines with #252525 in the output. rounding bug in xft?
+TODO: investigate -pe tabbed -g 80x25 being 23 not 24 or 25 lines
 TODO: zero scorllback buffer should free memory
 TODO: kuake
 TODO: depth resource not working(?)
@@ -28,6 +27,8 @@ TODO: fix the flaw in the url regex jost pointed out
 TODO: look into the selection hilight patch
 TODO: implement smartcase-like search in searchable-scrollback
 TODO: check wether -depth works as resource
+TODO: digital clock gets nuked after searching
+TODO: read .Xdefaults even when we have display resources, but give them lower priority
 	- add FORCE_UNBUFFERED_XFT define to features.h.
         - double-buffered xft drawing did suffer from pixel offset issues
           when pixmap transparency was enabled.
@@ -47,6 +48,8 @@ TODO: check wether -depth works as resource
         - slap in a using namespace std, might help on platforms that don't
           follow C++ closely enough.
         - fix mailto url regex, spotted within milliseconds by Jost Krieger.
+        - use less "correct" color scaling that is compatible with libX11 and Xft
+          (avoids off-by-one colors resulting in striped backgrounds).
 
 7.7  Tue Feb 21 12:32:49 CET 2006
 	- use double-buffered drawing (xft fonts only). On many driver/hardware
